--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,2 +1,32 @@
 name: CI
 
+on:
+  push:
+    branches: [App]
+  pull_request:
+    branches: [App]
+
+jobs:
+  flutter_format:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+      - name: Check formatting
+        run: flutter format --set-exit-if-changed .
+        working-directory: apps/mobile
+
+  backend_tests:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: pip install -r backend/api/requirements.txt
+      - name: Run tests
+        run: pytest
+        working-directory: backend/api
