--- a/apps/mobile/pubspec.yaml
+++ b/apps/mobile/pubspec.yaml
@@ -7,7 +7,9 @@ dependencies:
   flutter:
     sdk: flutter
   go_router: ^13.0.0
-  flutter_riverpod: ^2.5.1
+  shared_preferences: ^2.2.2
+  lottie: ^2.6.0
+  http: ^0.13.6
   scredex_design_system:
     path: ../../packages/design_system
 dev_dependencies:
@@ -16,3 +18,6 @@ dev_dependencies:
   flutter_lints: ^2.0.0
 flutter:
   uses-material-design: true
+  assets:
+    - assets/animations/scredex_logo.json
+    - assets/stubs/billers.json
